test/compiler/pass/functions.bt

func printHello() -> unit {
    print(5);
}

printHello();
printHello();