test/compiler/fail/typemismatch.bt
func returnMe(int c) -> unit {
    return c;
}

int d = returnMe(5);
print(d);